package metaserverpb;

option go_package = ".;chunkserverpb";


service AskPut {
    rpc AskPut (AskPutRequest) returns (AskPutResponse) {}
}

message AskPutRequest {
    required string name = 1;
    required int64 size = 2;
    required string object = 3;
    required string objectHash = 4;
}

message Habitat {
    required string destAddr = 1;
    required string destDir = 2;
}

message AskPutResponse {
    required int32 status = 1;
    repeated Habitat targets = 2;
    optional string msg = 4;
}
